// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keywords AnyKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.AnyKeyword;
  return type;
}, []);"
`;

exports[`Keywords BooleanKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.BooleanKeyword;
  return type;
}, []);"
`;

exports[`Keywords EmptyKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.NeverKeyword;
  return type;
}, []);"
`;

exports[`Keywords NeverKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.UndefinedKeyword;
  return type;
}, []);"
`;

exports[`Keywords NullKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.NullKeyword;
  return type;
}, []);"
`;

exports[`Keywords NumberKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.NumberKeyword;
  return type;
}, []);"
`;

exports[`Keywords ObjectKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.ObjectKeyword;
  return type;
}, []);"
`;

exports[`Keywords StringKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.StringKeyword;
  return type;
}, []);"
`;

exports[`Keywords UndefinedKeyword 1`] = `
"\\"use strict\\";

var _runtime = _interopRequireDefault(require(\\"@manta-style/runtime\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Test = _runtime.default.TypeAliasDeclaration(\\"Test\\", function (typeFactory) {
  var type = _runtime.default.UndefinedKeyword;
  return type;
}, []);"
`;
